ams/ams-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ams-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ams.meter.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ams-service
                port:
                  number: 80
